# mi-agent

./: .env.example  .gitignore  AGENTS.md  BOOTSTRAP.md  Dockerfile  README.md  app.py  docker-compose.yml  opencode.json  requirements.txt
.opencode/agent/: orchestrator.md
.opencode/agents/: architect.md  developer.md  devops.md  product-owner.md  qa.md
.opencode/skills/brief-structure/: SKILL.md
.opencode/skills/loop-engineering/: SKILL.md
.opencode/skills/qdrant-query/: SKILL.md
.opencode/skills/tavily-search/: SKILL.md
docs/: DOD.md  PRD.md  architecture.md  handoff-template.md  loop-engineering.md
mi-agent/: .env.example  pyproject-poetry.toml  pyproject.toml
mi-agent/docs/: PRD.md  USER_STORIES.md
mi-agent/src/: config.py
mi-agent/src/agent/: graph.py  llm.py  runner.py
mi-agent/src/api/: main.py
mi-agent/src/tools/: generate_report.py  query_rag.py  search_web.py
mi-agent/src/ui/: app.py
mi-agent/tests/: test_agent.py  test_api.py  test_tools.py
scripts/: main.py
scripts/agents/: orchestrator.py  researcher.py  synthesizer.py
scripts/graph/: state.py  workflow.py
scripts/loops/: iteration_manager.py  self_critique.py
scripts/tools/: openrouter_tool.py  qdrant_tool.py  tavily_tool.py
tests/e2e/: test_brief_generation.py
tests/integration/: test_graph_flow.py
tests/unit/: test_openrouter.py  test_qdrant.py  test_tavily.py
